# CGPA_CalculatorUI

./: CMakeLists.txt  app.c  app.h  main.c
Renderers/raylib/: clay_renderer_raylib.c  clay_renderer_raylib.c.backup
include/: clay.h  raylib.h
